SUBDIRS = tiles
EXTRA_DIST = ambulance.png \
ammo.png \
ammotent.png \
blueflag.png \
emptytile.png \
endscreen.jpg \
explosion.png \
fire.png \
fire2.png \
flagblue.png \
flaggreen.png \
fuel.png \
fuelstation.png \
grasssmoke.png \
hdoor.png \
headquater.png \
headquaterdamaged.png \
headquaterdestroyed.png \
helicopter.png \
helicopter_shadow.png \
helidestroyed.png \
hole.png \
horizwall.png \
hospital.png \
hovercraft.png \
jeep.png \
keys.png \
krater.png \
logo.jpg \
mediumexplo.png \
mgun.png \
mine.png \
mineactive.png \
minewater.png \
minewateractive.png \
parking.png \
projectile.png \
radar.png \
radar_line.png \
rails.png \
rotor.png \
rotor1.png \
rotor2.png \
sand.jpg \
sandsmoke.png \
shockwave.png \
smallexplo.png \
smod.png \
soldier.png \
soldierdead.png \
start.png \
stone.png \
street.png \
street_cross.png \
street_curve.png \
street_h1.png \
street_h2.png \
street_h3.png \
street_t1.png \
street_t2.png \
street_t3.png \
street_t4.png \
street_v1.png \
street_v2.png \
street_v3.png \
tank.png \
tank2.png \
tank2_shadow.png \
tank2destroyed.png \
tankdestroyed.png \
towerbase.png \
towerdamaged.png \
towerdestroyed.png \
towerturret.png \
towerwall-e.png \
tree.png \
tree2.png \
tree2_shadow.png \
tree_shadow.png \
turret.png \
turret2.png \
turret2_shadow.png \
vdoor.png \
wall.png \
wall_damaged.png \
wall_destroyed.png \
waterdust.png

# EOF #