noinst_LIBRARIES = libfeuerkraft_buildings.a

libfeuerkraft_buildings_a_SOURCES = \
ammotent.cxx \
ammotent.hxx \
ammotent_data.cxx \
ammotent_data.hxx \
base.cxx \
base.hxx \
base_data.cxx \
base_data.hxx \
basis_data.hxx \
building.hxx \
building.cxx \
building_data.hxx \
building_map.cxx \
building_map.hxx \
building_manager.cxx \
building_manager.hxx \
building_map_data.cxx \
building_map_data.hxx \
building_type_manager.hxx \
building_type_manager.cxx \
fuelstation.cxx \
fuelstation.hxx \
fuelstation_data.cxx \
fuelstation_data.hxx \
custom_building.hxx \
custom_building.cxx \
headquarter.cxx \
headquarter.hxx \
headquarter_data.cxx \
headquarter_data.hxx \
tower_ai.cxx \
tower_ai.hxx \
tower.cxx \
tower.hxx \
tower_data.cxx \
tower_data.hxx \
wall.cxx \
wall.hxx \
wall_data.cxx \
wall_data.hxx \
wall_door.cxx \
wall_door.hxx \
wall_door_data.cxx \
wall_door_data.hxx

# EOF #