noinst_LIBRARIES = libfeuerkraft_buildings.a

libfeuerkraft_buildings_a_SOURCES = \
ammotent.cxx \
ammotent.hxx \
building.hxx \
building.cxx \
building_map.cxx \
building_map.hxx \
building_manager.cxx \
building_manager.hxx \
building_map_data.cxx \
building_map_data.hxx \
building_type_manager.hxx \
building_type_manager.cxx \
fuelstation.cxx \
fuelstation.hxx \
custom_building.hxx \
custom_building.cxx \
headquarter.cxx \
headquarter.hxx \
tower_ai.cxx \
tower_ai.hxx \
tower.cxx \
tower.hxx \
wall.cxx \
wall.hxx \
wall_door.cxx \
wall_door.hxx

# EOF #