noinst_LIBRARIES = libfeuerkraft_buildings.a

libfeuerkraft_buildings_a_SOURCES = \
ammotent.cpp \
ammotent.hpp \
building.hpp \
building.cpp \
building_map.cpp \
building_map.hpp \
building_manager.cpp \
building_manager.hpp \
building_map_data.cpp \
building_map_data.hpp \
building_type_manager.hpp \
building_type_manager.cpp \
fuelstation.cpp \
fuelstation.hpp \
custom_building.hpp \
custom_building.cpp \
headquarter.cpp \
headquarter.hpp \
tower_ai.cpp \
tower_ai.hpp \
tower.cpp \
tower.hpp \
wall.cpp \
wall.hpp \
wall_door.cpp \
wall_door.hpp

# EOF #