noinst_LIBRARIES = libfeuerkraft_groundmap.a

libfeuerkraft_groundmap_a_SOURCES = \
  GroundMap.hxx                         \
  GroundMapData.hxx                     \
  TileMap.cxx        TileMap.hxx        \
  SpriteTile.hxx     SpriteTile.cxx     \
  SpriteTileData.hxx SpriteTileData.cxx \
  GroundType.hxx                        \
  Tile.hxx                              \
  TileData.hxx                          \
  TileDataFactory.hxx \
  TileDataFactory.cxx \
  GroundMapDataFactory.cxx \
  GroundMapDataFactory.hxx \
  TileMapData.cxx \
  TileMapData.hxx \
  MultiGroundMap.hxx \
  MultiGroundMap.cxx \
  MultiGroundMapData.hxx \
  MultiGroundMapData.cxx \
  GridMapData.hxx \
  GridMapData.cxx \
  GridMap.hxx \
  GridMap.cxx \
  GridTileData.hxx \
  GridTileData.cxx \
  GridTile.hxx \
  GridTile.cxx \
  GridTileGenerator.hxx \
  GridTileGenerator.cxx

# EOF #