noinst_LIBRARIES = libfeuerkraft_groundmap.a

libfeuerkraft_groundmap_a_SOURCES = \
grid_map.cxx \
grid_map.hxx \
grid_map_data.cxx \
grid_map_data.hxx \
grid_tile.cxx \
grid_tile.hxx \
grid_tile_data.cxx \
grid_tile_data.hxx \
grid_tile_generator.cxx \
grid_tile_generator.hxx \
ground_map.hxx \
ground_map_data.cxx \
ground_map_data.hxx \
ground_map_data_factory.cxx \
ground_map_data_factory.hxx \
ground_type.hxx \
ground_type.cxx \
multi_ground_map.cxx \
multi_ground_map.hxx \
multi_ground_map_data.cxx \
multi_ground_map_data.hxx \
sprite_tile.cxx \
sprite_tile.hxx \
sprite_tile_data.cxx \
sprite_tile_data.hxx \
tile.hxx \
tile_data.hxx \
tile_data_factory.cxx \
tile_data_factory.hxx \
tile_map.cxx \
tile_map.hxx \
tile_map_data.cxx \
tile_map_data.hxx


# EOF #