noinst_LIBRARIES = libfeuerkraft_groundmap.a

libfeuerkraft_groundmap_a_SOURCES = \
grid_map.cpp \
grid_map.hpp \
grid_map_data.cpp \
grid_map_data.hpp \
grid_tile.cpp \
grid_tile.hpp \
grid_tile_data.cpp \
grid_tile_data.hpp \
grid_tile_generator.cpp \
grid_tile_generator.hpp \
ground_map.hpp \
ground_map_data.cpp \
ground_map_data.hpp \
ground_map_data_factory.cpp \
ground_map_data_factory.hpp \
ground_type.hpp \
ground_type.cpp \
multi_ground_map.cpp \
multi_ground_map.hpp \
multi_ground_map_data.cpp \
multi_ground_map_data.hpp \
sprite_tile.cpp \
sprite_tile.hpp \
sprite_tile_data.cpp \
sprite_tile_data.hpp \
tile.hpp \
tile_data.hpp \
tile_data_factory.cpp \
tile_data_factory.hpp \
tile_map.cpp \
tile_map.hpp \
tile_map_data.cpp \
tile_map_data.hpp


# EOF #