noinst_LIBRARIES = libfeuerkraft_input.a

libfeuerkraft_input_a_SOURCES = \
  controller.hxx \
  controller.cxx \
  input_event.hxx \
  input_manager.hxx \
  input_manager.cxx \
  input_manager_impl.hxx \
  input_manager_joystick.hxx \
  input_manager_joystick.cxx \
  input_manager_keyboard.hxx \
  input_manager_keyboard.cxx

# EOF #
