noinst_LIBRARIES = libfeuerkraft_input.a

libfeuerkraft_input_a_SOURCES = \
  controller.hxx \
  controller.cxx \
  input_event.hxx \
  input_manager.hxx \
  input_manager.cxx \
  input_manager_impl.hxx \
  input_manager_impl.cxx \
  input_manager_custom.hxx \
  input_manager_custom.cxx \
  input_manager_joystick.hxx \
  input_manager_joystick.cxx \
  input_manager_keyboard.hxx \
  input_manager_keyboard.cxx \
  input_button.hxx \
  input_axis.hxx \
  input_button_input_device.hxx \
  input_button_input_device.cxx \
  input_axis_input_device.hxx \
  input_axis_input_device.cxx \
  button_factory.hxx \
  button_factory.cxx \
  axis_factory.hxx \
  axis_factory.cxx

# EOF #
