LDADD    = @INPUT_LIBS@
CPPFLAGS = @INPUT_CFLAGS@

noinst_LIBRARIES = libfeuerkraft_input.a

libfeuerkraft_input_a_SOURCES = \
  controller.hpp \
  controller.cpp \
  input_event.hpp \
  input_manager.hpp \
  input_manager.cpp \
  input_manager_impl.hpp \
  input_manager_impl.cpp \
  input_manager_custom.hpp \
  input_manager_custom.cpp \
  input_manager_player.hpp \
  input_manager_player.cpp \
  input_button.hpp \
  input_axis.hpp \
  input_button_input_device.hpp \
  input_button_input_device.cpp \
  input_axis_input_device.hpp \
  input_axis_input_device.cpp \
  axis_button.hpp \
  axis_button.cpp \
  button_axis.hpp \
  button_axis.cpp \
  button_factory.hpp \
  button_factory.cpp \
  axis_factory.hpp \
  axis_factory.cpp \
  input_recorder.hpp \
  input_recorder.cpp \
  multi_button.hpp \
  multi_button.cpp

# EOF #
