noinst_LIBRARIES = libfeuerkraft_particles.a

libfeuerkraft_particles_a_SOURCES = \
 explosion_particle.hxx \
 particle.hxx           \
 particle_system.hxx    \
 smoke_particle.hxx     \
 sand_particle.hxx      \
 grass_particle.hxx     \
 fire_particle.hxx     \
 fire_particle.cxx     \
 fire_emitter.hxx      \
 fire_emitter.cxx      \
 smoke_emitter.hxx     \
 smoke_emitter.cxx      

# EOF #