noinst_LIBRARIES = libfeuerkraft_particles.a

libfeuerkraft_particles_a_SOURCES = \
 explosion_particle.hpp \
 particle.hpp           \
 particle_system.hpp    \
 smoke_particle.hpp     \
 sand_particle.hpp      \
 grass_particle.hpp     \
 fire_particle.hpp     \
 fire_particle.cpp     \
 fire_emitter.hpp      \
 fire_emitter.cpp      \
 rocket_smoke_particle.hpp     \
 rocket_smoke_particle.cpp     \
 smoke_emitter.hpp     \
 smoke_emitter.cpp     

# EOF #